# nanog92-hackathon-challenges

./: Makefile  README.md
network-01/: network-01.yml
network-02/: network-02.yml
scenario_graphql/: gql_query.py  pyproject.toml
scenario_nautobot/: README.md  nbhack.clab.yml
